// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeTable should render with empty data 1`] = `
<div>
  <div
    class="ant-table-wrapper exchange-table css-dev-only-do-not-override-nllxry"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-nllxry"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered ant-table-empty"
          data-testid="exchange-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: 10%;"
                  />
                  <col
                    style="width: 150px;"
                  />
                  <col
                    style="width: 150px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Currency
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Buy
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Sell
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="3"
                    >
                      <div
                        class="css-dev-only-do-not-override-nllxry ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                cx="32"
                                cy="33"
                                fill="#f5f5f5"
                                rx="32"
                                ry="7"
                              />
                              <g
                                fill-rule="nonzero"
                                stroke="#d9d9d9"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                  fill="#fafafa"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <div
                          class="ant-empty-description"
                        >
                          No data
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeTable should render without data 1`] = `
<div>
  <div
    class="ant-table-wrapper exchange-table css-dev-only-do-not-override-nllxry"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-nllxry"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered"
          data-testid="exchange-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: 10%;"
                  />
                  <col
                    style="width: 150px;"
                  />
                  <col
                    style="width: 150px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Currency
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Buy
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Sell
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      USD/UAH
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        27.8
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        28.2
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="2"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      EUR/UAH
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        32.5
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        33.2
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="3"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      RUR/UAH
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        0.3
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        0.39
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="4"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      BTC/USD
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        10000
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        11000
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeTable should render without error 1`] = `
<div>
  <div
    class="ant-table-wrapper exchange-table css-dev-only-do-not-override-nllxry"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-nllxry"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered"
          data-testid="exchange-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: 10%;"
                  />
                  <col
                    style="width: 150px;"
                  />
                  <col
                    style="width: 150px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Currency
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Buy
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: center;"
                    >
                      Sell
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      USD/UAH
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        27.8
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        28.2
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="2"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      EUR/UAH
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        32.5
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        33.2
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="3"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      RUR/UAH
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        0.3
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        0.39
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0 editable-row"
                    data-row-key="4"
                  >
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      BTC/USD
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        10000
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: center;"
                    >
                      <div
                        class="editable-cell-value-wrap"
                      >
                        11000
                        <svg
                          class="edit-icon"
                        >
                          edit.svg
                        </svg>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
